fix(quantic): fixed facet value overflow (#2528)
* fix(quantic): fixed facet value overflow

* fix(quantic): added some missing title attributes

* fix(quantic): removed nowrap

--- a/packages/quantic/force-app/main/default/lwc/quanticCategoryFacetValue/quanticCategoryFacetValue.css
+++ b/packages/quantic/force-app/main/default/lwc/quanticCategoryFacetValue/quanticCategoryFacetValue.css
@@ -1,5 +1,9 @@
 @import 'c/quanticFacetStyles';
 
+:host {
+  width: 100%;
+}
+
 .facet__path {
   overflow: hidden;
   text-overflow: ellipsis;
